<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_fecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:textSize="18dp"
                android:text="@string/titulo_seleccionar_tarjeta"
                android:textColor="@color/blanco"
                android:textStyle="bold"
                android:padding="10dp"/>

            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                ads:adSize="BANNER"
                ads:adUnitId="@string/id_baner_admob">
            </com.google.android.gms.ads.AdView>
            <LinearLayout
                android:id="@+id/lista_tarjetas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <RadioGroup android:id="@+id/radios_tarjetas"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp">


                </RadioGroup>
                <TextView
                    android:id="@+id/no_tarjetas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sin_tarjetas"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:visibility="gone"
                    android:layout_margin="30dp"/>


                <Button
                    android:id="@+id/agregar_tarjeta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/boton"
                    android:text="Agregar tarjeta"
                    android:textSize="12dp"
                    android:padding="20dp"/>
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blanco"
                android:gravity="center"
                android:textSize="15dp"
                android:text="@string/resumen_pedido"
                android:textColor="@color/colorPrimary"
                android:padding="10dp"/>
            <com.myt.andyapp.Model.NonScrollListView
                android:id="@+id/lv_productos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/total"
                    android:textSize="18dp"
                    android:gravity="right"
                    android:textColor="@color/colorPrimaryDark"/>
                <TextView
                    android:id="@+id/tv_total"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18dp"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryDark"/>
            </LinearLayout>
            <TextView
                android:id="@+id/lugar_entrega"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blanco"
                android:gravity="center"
                android:textSize="15dp"
                android:text="@string/instrucciones_direccion"
                android:textColor="@color/colorPrimary"
                android:padding="10dp"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_direccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="7">


            </android.support.design.widget.TextInputLayout>

            <!--<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"-->
                <!--android:id="@+id/forma_pago"-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="vertical" >-->
                <!--<RadioButton-->
                    <!--android:layout_gravity="center"-->
                    <!--android:id="@+id/radio_efectivo"-->
                    <!--android:layout_margin="5dp"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="Efectivo"-->
                    <!--android:textSize="18dp"/>-->



                <!--<RadioButton-->
                    <!--android:id="@+id/radio_credito"-->
                    <!--android:layout_margin="5dp"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="Tarjeta de crédito o débito"-->
                    <!--android:layout_gravity="center"-->
                    <!--android:textSize="18dp"/>-->
                <!--<RadioButton-->
                    <!--android:id="@+id/radio_transferencia"-->
                    <!--android:layout_margin="5dp"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="Depósito"-->
                    <!--android:layout_gravity="center"-->
                    <!--android:textSize="18dp"/>-->


            <!--</RadioGroup>-->

            <Button
                android:id="@+id/btn_confirmar_pedido"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/realizar_pedido"
                android:onClick="agregarProducto"/>

            <Button
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:id="@+id/btn_regresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/atras"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/boton"
                android:onClick="regresar"
                />



        </LinearLayout>
    </ScrollView>
</LinearLayout>