<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:padding="20dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/blanco"
            android:text="id Pedidos"
            android:id="@+id/id_pedido"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="15dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

    </LinearLayout>
    <!--Estado-->
    <ImageView
        android:id="@+id/img_estado"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:src="@drawable/estado2"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_estado"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="@color/verde"
            android:textStyle="bold"/>
    </LinearLayout>
    <TextView
        android:layout_margin="5dp"
        android:background="@color/gris_claro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/repartidor"
        android:gravity="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_repartidor"
        android:gravity="center"/>
    <TextView
        android:id="@+id/mensaje_sin_calificacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/boton_rojo"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/sin_calificacion"/>
    <RatingBar
        android:theme="@style/RatingBar"
        android:id="@+id/ratting_repartidor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX=".5"
        android:scaleY=".5"
        android:layout_weight="1"
        android:stepSize="1.0"
        android:rating="0.0"
        android:layout_gravity="center"
        android:clickable="false"
        android:layout_margin="-0dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/calendario"
            android:layout_marginLeft="10dp"
            android:scaleY=".7"
            android:scaleX=".7"/>
        <TextView
            android:id="@+id/tv_fecha_realizacion"
            android:layout_width="0dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fecha_entrega"
            android:layout_marginLeft="10dp"
            android:scaleY=".7"
            android:scaleX=".7"/>
        <TextView
            android:id="@+id/tv_fecha_entrega"
            android:layout_width="0dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginLeft="10dp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        >
        <TextView
            android:background="@color/gris_claro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/productos_solicitados"
            android:gravity="center"
            />
    </LinearLayout>
    <com.myt.andyapp.Model.NonScrollListView
        android:id="@+id/lv_productos_calificados2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/total"
            android:gravity="right"
            android:textStyle="bold"

            android:textSize="15dp"
            />
        <TextView
            android:id="@+id/tv_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="15dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        >
        <TextView
            android:background="@color/gris_claro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/forma_pago"
            android:gravity="center"
            />
    </LinearLayout>
    <!--Forma de pago-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">
        <ImageView
            android:id="@+id/img_forma_pago"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"

            android:orientation="vertical">
            <TextView
                android:layout_gravity="center"
                android:id="@+id/tv_forma_pago"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                />
            <TextView
                android:id="@+id/cuatro_digitos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:visibility="gone"
                />
            <TextView
                android:id="@+id/autorizacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:visibility="gone"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">
        <Button
            android:id="@+id/btn_calificar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/calificar"
            android:background="@drawable/boton"
            android:padding="10dp"
            android:visibility="gone"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:textSize="12dp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"/>


</LinearLayout>